# ModelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: SimplePixelShader.hlsl  SimpleVertexShader.hlsl  base.hlsl
src/: Assets.h  Camera.cpp  Camera.h  DX11Interface.cpp  DX11Interface.h  InputManager.cpp  InputManager.h  Loader.cpp  Loader.h  Logger.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  xmain.cpp
